Mention admin:copy_assets rake task in installation instructions.

--- a/README.mkd
+++ b/README.mkd
@@ -58,6 +58,11 @@ and unpack the 'ckeditor' folder into your default 'public/javascripts' folder. 
 non-Windows system, you can try to use the automatic downloader:
     $ rake admin:ckeditor_download
 
+When running RailsAdmin in production the images, stylesheets, and javascript assets may return 404
+not found error's depending on your servers static assets configuration.  To prevent this issue you
+can copy assets directly into your application by running:
+    $ rake admin:copy_assets
+        
 Usage
 -----
 Start the server:
