Fixing delete_selected pt-BR translation

--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -29,7 +29,7 @@ pt-BR:
       select: "Selecione %{name} para alterar"
       show_all: "Exibir todos"
       select_action: "Selecionar"
-      delete_selected: "Exclir selecionados"
+      delete_selected: "Excluir selecionados"
     new:
       basic_info: "INFORMAÇÕES BÁSICAS"
       required: "Obrigatório"
