Improved Fr translations

--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -1,29 +1,29 @@
 
 fr:
   home:
-    name: "home"
+    name: "/"
   admin:
     dashboard:
-      pagename: "Administration du site"
+      pagename: "Administration"
       name: "Tableau de bord"
       model_name: "Nom du modèle"
       last_used: "Utilisé"
-      records: "Archives"
+      records: "Enregistrements"
       modify: "Modifier"
       add_new: "Nouv"
       show: "Voir"
-      ago: "ago"
+      ago: ""
     history:
-      name: "Histoire"
-      page_name: "Histoire de %{name}"
+      name: "Historique"
+      page_name: "Historique de %{name}"
     credentials:
       log_out: "Déconnectez-vous"
     list:
       edit_action: "Éditer"
-      delete_action: "Effacer"
+      delete_action: "Supprimer"
       add_new: "Nouv"
-      search: "RECHERCHE"
-      select: "Sélectionner %{name} pour modifier"
+      search: "Recherche"
+      select: "Sélectionner un(e) %{name} pour modification"
       show_all: "Afficher tous"
     new:
       basic_info: "INFO DE BASE"
@@ -31,25 +31,25 @@ fr:
       optional: "Facultatif"
       one_char: "caractère."
       many_chars: "caractères ou moins."
-      chosen: "%{name} choisi"
+      chosen: "%{name} choisi(e)"
       select_choice: "Sélectionnez votre choix"
-      chose_all: "Choisissez toutes"
-      clear_all: "Effacer tout"
+      chose_all: "Tous"
+      clear_all: "Vider"
       save: "Enregistrer"
-      save_and_add_another: "Enregistrer et ajouter une autre"
-      save_and_edit: "Enregistrer et modifier"
+      save_and_add_another: "Enregistrer et créer un(e) autre"
+      save_and_edit: "Enregistrer et re-modifier"
       cancel: "Annuler"
     delete:
-      flash_confirmation: "%{name} a été détruit avec succès"
-      confirmation: "Oui, je suis sûr"
+      flash_confirmation: "%{name} a été détruit(e) avec succès"
+      confirmation: "Oui, je suis sûr(e)"
     flash:
-      successful: "%{name} a été  %{action} avec succès"
-      error: "%{name} n'a pas pu être %{action}"
-      noaction: "Aucune mesure où prendre!"
+      successful: "%{name} a été  %{action}(e) avec succès"
+      error: "%{name} n'a pas pu être %{action}(e)"
+      noaction: "Aucune action !"
     actions:
-      create: "create"
-      created: "created"
-      update: "update"
-      updated: "updated"
-      delete: "delete"
-      deleted: "deleted"
+      create: "création"
+      created: "créé"
+      update: "modification"
+      updated: "modifié"
+      delete: "suppression"
+      deleted: "supprimé"
